# eternity2AG

./: CMakeLists.txt  README.md
Processing/sketch_190409a/: sketch_190409a.pde
application/: CMakeLists.txt  main.cpp  mainOLD.cpp
benchs/: benchEternity2.txt
benchs/BenchsYahoo/: eval.cpp  hop  sol_16x16.txt  translate  translate.cpp
benchs/E2BenchmarkWithoutHints/: E_10_1.b11i11.nohint  E_10_10.b12i12.nohint  E_10_11.b13i13.nohint  E_10_12.b12i13.nohint  E_10_13.b12i12.nohint  E_10_14.b12i13.nohint  E_10_15.b11i12.nohint  E_10_16.b13i13.nohint  E_10_17.b13i13.nohint  E_10_18.b12i13.nohint  E_10_19.b12i13.nohint  E_10_2.b11i11.nohint  E_10_20.b11i14.nohint  E_10_21.b12i13.nohint  E_10_22.b12i13.nohint  E_10_23.b12i12.nohint  E_10_24.b12i12.nohint  E_10_25.b12i12.nohint  E_10_26.b12i12.nohint  E_10_3.b11i11.nohint  E_10_4.b11i11.nohint  E_10_5.b14i14.nohint  E_10_6.b11i12.nohint  E_10_7.b12i15.nohint  E_10_8.b13i14.nohint  E_10_9.b12i14.nohint  E_7_1.b6i6.nohint  E_7_2.b6i6.nohint  E_7_3.b6i6.nohint  E_7_4.b6i6.nohint  E_8_1.b8i8.nohint  E_9_1.b9i9.nohint  E_9_10.b10i10.nohint  E_9_11.b9i11.nohint  E_9_12.b10i10.nohint  E_9_13.b10i10.nohint  E_9_14.b9i10.nohint  E_9_15.b10i10.nohint  E_9_16.b9i10.nohint  E_9_17.b9i10.nohint  (+9 more)
benchs/Meta2010Contest/: eval  eval.cpp  eval2  invalidSol.txt  sol.txt  test  test2
doc/: CMakeLists.txt
src/: CMakeLists.txt  Piece.h  Problem.cpp  Problem.h  Solution.cpp  Solution.h  crossContourCentre.h  crossOrderXover.h  evalSolution.cpp  evalSolution.h  initSolution.cpp  initSolution.h  localSearch.cpp  localSearch.h  swapGoodSquare.h  swapLocalSearch.h  swapRotate.h
